# Backend-I

./: projecto.py
Aula 2/: rectangle.py
Aula 3/: test_ce.py
Aula4/CLI/: Makefile  README.md  cli.py  pyproject.toml
Aula4/CLI_ListaDeCompras/: app.py
Aula5/StartOver/: pyproject.toml
Aula5/inventory_app/: main.py  whatever.py
Chrome Dino/: chrome_dino.py
LeetCode/: two_sum.py
LeetCode/21032024/: circle.py  rectangle.py
aula1/: two_sum.py
aula10/: Dockerfile  docker-compose.yaml  pyproject.toml
aula10/api/: main.py
aula11/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
aula11/api/: main.py
aula11/api/routes/: products.py
aula12/api/: clients.py  main.py  models.py
aula12/scripts/: fakedb.py
aula13/: db.json  docker-compose.yaml  pyproject.toml
aula13/api/: clients.py  run.py
aula14/: db.sqlite3  pyproject.toml
aula14/aula14/: settings.py  urls.py
aula14/posts/: models.py
aula15/: db.sqlite3  manage.py  pyproject.toml
aula15/aula15/: asgi.py  settings.py  urls.py  wsgi.py
aula15/products/: views.py
aula16/: pyproject.toml
aula17/: db.sqlite3
aula18/: api.Dockerfile  django.Dockerfile  docker-compose.yml
aula2/: circle.py  rectangle.py
aula3/: rectangle.py  sleeper.py  test_ce.py  test_rectangle.py
aula4/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
aula4/src/: cli.py
aula5/: pyproject.toml  run.py  test_cli.py
aula6/: Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
aula789/: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
(+38 files in other folders)
