[tool.poetry]
name = "aula11"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "api/*.py" }
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
faker = "^24.8.0"

[tool.poetry.scripts]
api = "api.run:api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
