[tool.poetry]
name = "aula4"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "src/*.py" }
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
program = "src.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
