[tool.poetry]
name = "aula5"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [
  {include = "*.py"}
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.scripts]
cli = "run:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
